crates/fyn/tests/it/snapshots/it__ecosystem__black-uv-lock-output.snap
---
source: crates/fyn/tests/it/ecosystem.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Resolved 42 packages in [TIME]
