crates/fyn/tests/it/snapshots/it__ecosystem__warehouse-uv-lock-output.snap
---
source: crates/fyn/tests/it/ecosystem.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
warning: The `tool.fyn.dev-dependencies` field (used in `pyproject.toml`) is deprecated and will be removed in a future release; use `dependency-groups.dev` instead
Resolved 323 packages in [TIME]
